--- a/config
+++ b/config
@@ -34,7 +34,8 @@ exec --no-startup-id dex --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 # exec_always --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # https://github.com/MashMB/manjaro-i3wm/blob/master/manjaro/home/.i3/config_org#L286
-exec --no-startup-id xautolock -time 10 -locker blurlock
+
+#exec --no-startup-id xautolock -time 10 -locker blurlock #disable
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
