--- a/config
+++ b/config
@@ -22,7 +22,7 @@ font pango:monospace 8
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
-exec --no-startup-id xfce4-power-manager
+#exec --no-startup-id xfce4-power-manager
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -34,11 +34,12 @@ exec --no-startup-id dex --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 #exec_always --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # https://github.com/MashMB/manjaro-i3wm/blob/master/manjaro/home/.i3/config_org#L286
-#exec --no-startup-id xautolock -time 10 -locker blurlock #disable old
+#exec --no-startup-id xautolock -time 10 -locker blurlock
 #https://bbs.archlinux.org/viewtopic.php?id=208699
 #exec --no-startup-id xautolock -time 15 -locker blurlock 
 # -notify 60 -notifier 'i3lock | xset dpms force off'
-exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer 3 'i3lock' '' --timer 30 'systemctl suspend' ''
+#exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer 1 'dm-tool lock' '' --timer 30 'systemctl suspend' ''
+#exec --no-startup-id xidlehook --not-when-audio --not-when-fullscreen --timer 1 "betterlockscreen -l dim" "" &
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -214,10 +215,11 @@ bindsym $mod+r mode "resize"
 # Start i3blocks to display a workspace bar
 bar {
     font pango: SauceCodePro Nerd Font 9
-    i3bar_command i3bar
+    #i3bar_command i3bar
     output primary
     position top
-    status_command i3blocks
+    #status_command i3blocks
+    status_command i3status-rs $HOME/.config/i3/i3status-rust-config.toml
     strip_workspace_numbers yes
     tray_output nonprimary
 
