--- a/config
+++ b/config
@@ -27,19 +27,9 @@ font pango:monospace 8
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
 
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-#exec_always --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-# https://github.com/MashMB/manjaro-i3wm/blob/master/manjaro/home/.i3/config_org#L286
-#exec --no-startup-id xautolock -time 10 -locker blurlock
-#https://bbs.archlinux.org/viewtopic.php?id=208699
-#exec --no-startup-id xautolock -time 15 -locker blurlock 
-# -notify 60 -notifier 'i3lock | xset dpms force off'
-#exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer 1 'dm-tool lock' '' --timer 30 'systemctl suspend' ''
-#exec --no-startup-id xidlehook --not-when-audio --not-when-fullscreen --timer 1 "betterlockscreen -l dim" "" &
+# lock screen
+exec --no-startup-id xidlehook --not-when-audio --not-when-fullscreen --timer 60 'betterlockscreen -l dim' '' --timer 1200 'systemctl suspend' &
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -380,4 +370,20 @@ mode "$mode_gaps_left" {
         bindsym Escape mode "default"
 }
 
-#i3-gaps
+set $Locker i3lock && sleep 1
+
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id $Locker, mode "default"
+    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+Pause mode "$mode_system"
