--- a/config
+++ b/config
@@ -12,11 +12,12 @@
 set $mod Mod4
 
 # set keyboard layout
-exec "setxkbmap -layout us,th -option 'grp:alt_shift_toggle'"
+exec --no-startup-id setxkbmap -layout us,th -option 'grp:alt_shift_toggle'
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+# font pango:monospace 8
+font pango:Ubuntu Regular 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -29,7 +30,10 @@ font pango:monospace 8
 exec --no-startup-id dex --autostart --environment i3
 
 # lock screen
-exec --no-startup-id xidlehook --not-when-audio --not-when-fullscreen --timer 60 'betterlockscreen -l dim' '' --timer 1200 'systemctl suspend' &
+#exec --no-startup-id xidlehook --not-when-audio --not-when-fullscreen --timer 60 'betterlockscreen -l dim' '' --timer 1200 'systemctl suspend' &
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
