--- a/i3status-rust-config.toml
+++ b/i3status-rust-config.toml
@@ -12,9 +12,9 @@ icons = "awesome4"
 bat = ["|E|", "|_|", "|=|", "|F|"]
 bat_charging = "|^| "
 
-[[block]]
-block = "music"
-format = " $icon {$combo.str(max_w:20) $play $next |}"
+# [[block]]
+# block = "music"
+# format = " $icon {$combo.str(max_w:20) $play $next |}"
 
 [[block]]
 block = "net"
